FIXED Jenkins Build Failure for web-services tests